--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@font-face {
+/* @font-face {
   font-family: cairo;
   src: url(./assets/fonts/Cairo-VariableFont_slnt\,wght.ttf);
-}
+} */
 
 *{
   font-family: cairo;
